# ToNES

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
doc/: cc65.md
include/: Bus.h  Cartridge.h  Clock.h  DataBus.h  Device.h  Instruction.h  InstructionDecoder.h  Log.h  MicroProcessor.h  MotherBoard.h  PictureProcessingUnit.h  Register.h  utils.h
src/: Bus.cpp  Cartridge.cpp  Clock.cpp  Color.cpp  DataBus.cpp  Device.cpp  Instruction.cpp  InstructionDecoder.cpp  Log.cpp  MicroProcessor.cpp  MotherBoard.cpp  PictureProcessingUint.cpp  main.cpp
test/: CMakeLists.txt
test/roms/: CMakeLists.txt  LogParser.hpp  RomParser.hpp  nes.cfg  roms.h.in
test/roms/cpu/: absolute.asm  absolute_x.asm  absolute_y.asm  arithmetic.asm  branch.asm  indirect.asm  indirect_x.asm  indirect_y.asm  interrupt.asm  jump.asm  load.asm  logic.asm  nop.asm  stack.asm  status.asm  transfer.asm  zero_page.asm  zero_page_x.asm  zero_page_y.asm
test/simulator/: CMakeLists.txt  Simulator.cpp  Simulator.h  main.cpp  mainwindow.ui  memoryviewer.ui  ppuviewer.ui
test/unittest/: CMakeLists.txt  Cartridge_test.cpp  Clock_test.cpp  CpuRegParser.hpp  Device_test.cpp  MicroProcessor_test.cpp  PictureProcessingUnit_test.cpp  Register_test.cpp  TestClock.cpp  TestMemory.cpp
